--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.datasource.url=
+spring.datasource.url=jdbc:postgresql://localhost:5432/socks
+spring.datasource.username=dima
+spring.datasource.password=123
+spring.jpa.hibernate.ddl-auto=validate
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.yml
+
